[gd_scene load_steps=3 format=3 uid="uid://keqadk5s6vut"]

[ext_resource type="Script" uid="uid://cgdvkwbgnqwi4" path="res://Cooking (mechanics and ui)/Scripts/dish_container.gd" id="1_l7edn"]
[ext_resource type="Texture2D" uid="uid://bcmgfab66d5xq" path="res://Datas/Assets/Dishes/berjerk_stick-Sheet.png" id="2_w5mkq"]

[node name="DishContainer" type="NinePatchRect"]
custom_minimum_size = Vector2(0, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1016.0
offset_bottom = -498.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l7edn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DishImage" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_w5mkq")
stretch_mode = 5

[node name="DishName" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Dish Name"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IngredientName" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "IngredientName"

[node name="IngredientImage" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
